// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server-bypassed build (SHERLO-1952) > NON-wait bypassed output is pinned 1`] = `
"
📦 Bundling for staged upload...


🍎 Building ios bundle...
  ✓ Bundle: bundle.ios.js (1.5 MB, plain-js, expo)

⬆️  Uploading ios bundle...

native-needed=false
reason=the registered base still matches this commit - running JS-only
base-fingerprint=BASE_FP

✅ Nothing needed capturing - no change reaches any story
   closed by the server - no device run was needed"
`;

exports[`server-bypassed build (SHERLO-1952) > non-bypassed output is byte-identical with and without --wait 1`] = `
"
📦 Bundling for staged upload...


🍎 Building ios bundle...
  ✓ Bundle: bundle.ios.js (1.5 MB, plain-js, expo)

⬆️  Uploading ios bundle...

native-needed=false
reason=the registered base still matches this commit - running JS-only
base-fingerprint=BASE_FP

url=http://app/build

🔗 Review: http://app/build"
`;
